[gd_scene load_steps=6 format=3 uid="uid://d0yi04218uul2"]

[ext_resource type="Script" path="res://scripts/level_clear_screen.gd" id="1_c3od4"]
[ext_resource type="LabelSettings" uid="uid://bedtepc8kaaw5" path="res://resources/bigtext_label_settings.tres" id="2_xac6a"]
[ext_resource type="LabelSettings" uid="uid://dse1o7dk5j0oi" path="res://resources/stats_label_settings.tres" id="3_l6o5l"]
[ext_resource type="Theme" uid="uid://disr836qacj33" path="res://resources/gui_theme.tres" id="4_cayai"]

[sub_resource type="LabelSettings" id="LabelSettings_7naag"]
font_size = 20
outline_size = 4
outline_color = Color(0, 0, 0, 1)
shadow_size = 6
shadow_color = Color(0, 0, 0, 0.0980392)
shadow_offset = Vector2(3, 3)

[node name="LevelClearScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c3od4")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.4
anchor_right = 0.5
anchor_bottom = 0.4
grow_horizontal = 2
grow_vertical = 2
text = "Level Complete"
label_settings = ExtResource("2_xac6a")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Stuff" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
theme_override_constants/separation = 8
alignment = 1

[node name="ScoreLbl" type="Label" parent="Stuff"]
unique_name_in_owner = true
layout_mode = 2
text = "Score: 0"
label_settings = ExtResource("3_l6o5l")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimeLbl" type="Label" parent="Stuff"]
unique_name_in_owner = true
layout_mode = 2
text = "Time: 0:00"
label_settings = ExtResource("3_l6o5l")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Tip" type="Label" parent="Stuff"]
unique_name_in_owner = true
custom_minimum_size = Vector2(750, 0)
layout_mode = 2
text = "TIP: Eat more of these soft French buns and drink some tea."
label_settings = SubResource("LabelSettings_7naag")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="ContinueBtn" type="Button" parent="Stuff"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("4_cayai")
text = "Continue"

[node name="ExitBtn" type="Button" parent="Stuff"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("4_cayai")
text = "Main Menu"
